# CaptureRGBDT

./: .gitignore  CMakeLists.bak.txt  CMakeLists.txt  README.md  calib-corners.cpp  calib-extrinsics.1.cpp  calib-extrinsics.2.cpp  calib-extrinsics.cpp  calib-intrinsics.1.cpp  calib-intrinsics.cpp  calib-thermal-intrinsics.cpp  capture-rgbt-rls.cpp  capture-rgbt.1.cpp  capture-rgbt.cpp  people-segmentation-utils.cpp  pt_pipeline.hpp  rs-getting-started.cpp  safe_queue.hpp  test_chessboard_detection.cpp  utils.hpp  viewer-rgbt.cpp
src/: CMakeLists.txt  calib-corners.cpp  calib-extrinsics.cpp  calib-intrinsics.cpp  capture-rgbt.cpp  capture-rgbt.old.cpp  rm-empty-captures.cpp  viewer-rgbt.cpp
src/pt/: pipeline.hpp
src/rs/: helpers.hpp
src/tests/: CMakeLists.txt  project_info.cpp  resize.cpp  struct_test.cpp  test_chessboard_detection.cpp
src/utils/: calibration.hpp  common.hpp  detection.hpp  safe_queue.hpp  synchronization.hpp
